syntax = "proto3";
package store;

service Store {
  rpc createRestaurant(CreateRestaurantRequest) returns (CreateRestaurantResponse);
  rpc deleteRestaurant(DeleteRestaurantRequest) returns (DeleteRestaurantResponse);
  rpc updateRestaurant(UpdateRestaurantRequest) returns (UpdateRestaurantResponse);
  rpc getRestaurant(GetRestaurantRequest) returns (Restaurant);
  rpc getRestaurants(GetRestaurantsRequest) returns (stream Restaurant);
}

message Restaurant {
  string id = 1;
  string name = 2;
  string description = 3;
  bytes logo = 4;
}

message CreateRestaurantRequest {
  string ownerId = 1;
  string name = 2;
  string description = 3;
  bytes logo = 4;
}

message CreateRestaurantResponse {
  string restId = 1;
}

message DeleteRestaurantRequest {
  string restId = 1;
  string ownerId = 2;
}

message DeleteRestaurantResponse {
  bool success = 1;
}

message UpdateRestaurantRequest {
  string restId = 1;
  string name = 2;
  string description = 3;
  bytes logo = 4;
  string ownerId = 5;
}

message UpdateRestaurantResponse {
  bool success = 1;
}

message GetRestaurantRequest {
  string restId = 1;
}

message GetRestaurantsRequest {
  string ownerId = 1;
}
